--- a/min/talen/arabisch.html
+++ b/min/talen/arabisch.html
@@ -26,12 +26,6 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="../nl/home.html">Home</a></li>
-                <li><a href="../nl/op=op.html">OP=OP</a></li>
-                <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
-                <li><a href="../nl/sponsors.html">Sponsors</a></li>
-                <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
-                <li><a href="../nl/historiek.html">Historiek</a></li>
-                <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
             </ul>
         </div>
 
@@ -42,31 +36,27 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="../nl/home.html">Home</a></li>
-            <li><a href="../nl/op=op.html">OP=OP</a></li>
-            <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
-            <li><a href="../nl/sponsors.html">Sponsors</a></li>
-            <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
-            <li><a href="../nl/historiek.html">Historiek</a></li>
-            <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
         </ul>
-        <h1 class="center bckgrnd" id="homebg">Home</h1>
+        <h1 class="center bckgrnd" id="homebg">الصفحة الرئيسية - العربية</h1>
         <div class="container">
             <div class="hulp">
                 <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img hide-on-small-only" alt="">
                 <div id="knop" class="centered">
                     <div class="effect">
-                        <h4><a href="op=op.html">Hulp nodig?</a></h4>
+                        <h4><a href="op=op.html">بحاجة الى مساعدة؟?</a></h4>
                     </div>
                 </div>
             </div>
 
-            <p id="opening" class="para">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
+            <p id="opening" class="">؟لّلِستِعمََِالصالحةاخرئوموادومستخرچاتهوَحليبخضروَاتوَفَوََاكِهمِنالغّدَاِييَةللمَوََادن.َا.ممُبَادرةفِيخيرعمَلتُريدُونَالالِكترُونيالبَريدفيبِنَابَالاتصَاللاتّتردُّدُوا :( actiemenseninnood@gmail.com)شَارع ( 0473241361 ): الهَاتفاوعبر ( Carrefour Marktet, Statiestraat 53 A ) سَلتنَاستجِدُون .مُولبمَدِينَةمَوقعنَازِيََارَةعلَيكُمإدنالاَنترنِيتعبرلمُنتجَاتنََابشرَائكموالجَافةالغدََاَئيةالموَاّدمِنكُلشرَاَئيُمكِنُكُمكَمََاالغدَايِية( Trooper.be ) نَعملُالتَوَالّيعليالتَانيةالسَنةفَهَذِه . الاَعضَاَُءنَحنُصغيرةنِسبَةمِنهنََاخدُمُشجعبِتَمنالتسوقيُمكِنُكُمحيتإضَافِيةاموَالجَمعمِنتَمَكَنّنَّاوَكَتِيرةتخفِيضَات .</p>
 
             <div class="row">
 
+
                 <div class="col s12 l6 para">
-                    <h4 class="center">Voor wie</h4>
-                    <p>We zetten ons belangeloos in voor mensen die het moeilijk hebben, door naar hen te luisteren, begrip te tonen, directe noden te lenigen en vervolgens met hen mee op pad te gaan, zoekend naar een oplossing voor hun problemen.
+                    <h4 class="center">OP = OP</h4>
+                    <p>
+                        بِمَحَلِنَاالخبزَنَبِيعْصبَاخَاسَبتيَومِكُلَ (OP =OP ) فَبِفَضلهَايَحتَاجُونَهَاالَتِياىيةالغِداالسَلَةلاَِخدِّيَاتوَاانالمُعوِزِينلنَاسِيُمكِنُمُسَاعدَةمِنتَمَكَننََا
                     </p>
                 </div>
                 <div class="col s12 l6 center-align">
@@ -76,72 +66,50 @@
             <hr>
             <br>
             <div class="row onder">
+
                 <div class="col s12 m6 para">
-                    <h4 class="center">Wie zijn we</h4>
-                    <p>Op de dag van vandaag zijn wij een groep van 50 gedreven vrijwilligers die Actie voert voor Mensen In Nood, ongeacht welk hun geloof, kleur, of politieke overtuiging is. Wij zijn solidair met mensen die het moeten stellen met een leefloon, budgetbeheer of die gebukt gaan onder collectieve schuldbemiddeling. Ook voor mensen die uitgeprocedeerd zijn en geen enkele vorm van inkomen meer hebben trachten we er te zijn en mee op pad te gaan om oplossingen te zoeken.</p>
+                    <p>اَنفُسِهِمعلىالاَعتِمَادِوَالكَرِيمالعيشمِنَليَتَمَكَنوَاحُلُولاَلَهُمنَجِدُوَالفُقرَاءالنََاسِمِنَالكَتِير <br />.الطَازَجَةالفَوَاكِهِوَالخُضَرمِتلَالمُمَيَزةالمَوَادِمِنَمَجمُوعَةنَطرَحُاسبُوعكُلِفِيمَجَانَاالخُبزَنُعطيالخَمِيسوَتَاءالتُلاَيَومِفِي .</p>
                 </div>
                 <div class="col s12 m6 para">
-                    <h4 class="center">Hoe gaan we te werk</h4>
-                    <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
+                    <p>عائلة(450مِناكتَروَاسَاسِيَاعُضوَا200الاَنَلَدَيهَا ( MIN نُسَاعِدُالاَنوَكَرِيملِعَيشحللهَاوَجَدنَالاَنَنَاالاَنمَعُونَتَنَاتَحتَاجتَعُدلَم <br><br>( 140 )اسبُوعكُلَتَقرِيبَاعَائلة . <br>بِمَكتَبِالعنوَانبِنَفسالتَسجِيليُمكِنُهُالاَمريَهُمهُوَلِمَنمُولبِمَدِينَة( ST. Apollonialaan 198, MOL )بِشَارعنَتَواجَدُ <br><br>شكرَاوَالاَنتضَارقاّعةقُربالاَستِقبَالاَت. <br><br>(8u30-12u)السَاعةمِنسَبتكُلَ <br> (10u-12u)السَاعةمِنَخمِيسوَتُلاَتَاءكُل <br>11u-30 فيتسجيلأحدث <br>10 u en 12u بينخميسكل</p>
                 </div>
             </div>
         </div>
     </div>
     <footer class="footer center-align">
         <div class="row center-align">
-            <div class="col s12 l4">
-                <h4>Contactgegevens </h4>
-
-                <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
-                <hr>
-                <p>Kleding/huisraad/speelgoed <br> Gsm: 0468/58 51 39</p>
-                <hr>
-                <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
-                <hr>
-                <p>Bankrekening <br>
-                    BE29 7512 0621 4764 <br>
-                    BIC: AXABBE22 <br>
-                    Ondernemingsnummer : 0639.984.323
-                </p>
-            </div>
-            <div class="col s12 l4">
-                <h4>Adressen</h4>
-                <p>Maatschappelijke zetel <br>
-                    Bresserdijk 4 <br>
-                    2400 Mol</p>
-                <hr>
-                <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-
-                <div class="row linkenfoot">
-                    <div class="col s12 m4">
-                        <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
-                    </div>
-                    <div class="col s12 m4 ">
-                        <a href="#" class="fa fa-facebook"></a>
-                    </div>
-                    <div class="col s12 m4">
-                        <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
-                    </div>
-                </div>
 
 
-            </div>
-            <div class="col s12 l4 maps">
 
+
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.5532704525053!2d5.121459915320794!3d51.19045617958424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135ab180b037d%3A0xfa96d446291438f!2sBresserdijk%204%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579784547227!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" class="responsive-img"></iframe>
+            </div>
 
+            <div class="col s12 m6 l6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.570124284178!2d5.101584315758331!3d51.190145579584176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135a10a9a19c1%3A0x9111c9cf6d01fb2c!2sSint-Apollonialaan%20198%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579781606517!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
+            </div>
+        </div>
+        <div class="row linkenfoot">
+            <div class="col s12 m4">
+                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+            </div>
+            <div class="col s12 m4 ">
+                <a href="#" class="fa fa-facebook"></a>
+            </div>
+            <div class="col s12 m4">
+                <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
             </div>
         </div>
         <ul class="row taalfoot">
-
+            <li class="col s12 m2"><a href="">Nederlands</a></li>
             <li class="col s12 m2"><a href="">English</a></li>
-            <li class="col s12 m2"><a href="">Français</a></li>
             <li class="col s12 m2"><a href="">Espanol</a></li>
             <li class="col s12 m2"><a href="">Polski</a></li>
             <li class="col s12 m2"><a href="">русский</a></li>
-            <li class="col s12 m2"><a href="">العربية</a></li>
+            <li class="col s12 m2"><a href="">Français</a></li>
         </ul>
         <div class="footer-copyright">
             <div class="">
