onnodige para's weggehaald

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <p id="opening" class="para">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
+            <p id="opening">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
 
             <div class="row">
 
