--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -49,9 +49,9 @@
             <li><a href="../nl/historiek.html">Historiek</a></li>
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
         </ul>
-      <h1 class="center bckgrnd" id="armoedebeleidbg">Onze partners in armoedebeleid</h1>
+        <h1 class="center bckgrnd" id="armoedebeleidbg">Onze partners in armoedebeleid</h1>
         <div class="container">
-          
+
 
             <div class="row">
                 <div class="col s12 l6">
@@ -64,7 +64,7 @@
                         014 32 04 83 <br>
                         vierdewereldwerking-mol@skynet.be</p>
                 </div>
-                <div class="col s12 l6">
+                <div class="col s12 l6 para">
                     <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400" height="200" class="responsive-img">
                 </div>
             </div>
