--- a/min/nl/historiek.html
+++ b/min/nl/historiek.html
@@ -49,11 +49,11 @@
             <li><a href="../nl/historiek.html">Historiek</a></li>
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
         </ul>
-         <h1 class="center bckgrnd" id="historiekbg">Historiek</h1>
+        <h1 class="center bckgrnd" id="historiekbg">Historiek</h1>
         <div class="container">
 
-           
-            <p id="opening" class="para">Op een zomernamiddag in het jaar 1983 werd er gebeld aan de pastorij van Achterbos,
+
+            <p id="opening">Op een zomernamiddag in het jaar 1983 werd er gebeld aan de pastorij van Achterbos,
                 bij pastoor Frans, met de mededeling dat er een gezin met 5 kinderen op straat werd
                 gezet door een deurwaarder. Dit voorval zette pastoor Frans aan het denken en hij riep
                 de gemeenschap op om te hulp te schieten en om in de toekomst een antwoord te
