--- a/min/nl/ookdoneren.html
+++ b/min/nl/ookdoneren.html
@@ -49,17 +49,17 @@
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
         </ul>
 
-            <h1 class="center bckgrnd" id="donerenbg">Ook doneren?</h1>
+        <h1 class="center bckgrnd" id="donerenbg">Ook doneren?</h1>
         <div class="container">
 
 
-            <p class="para">Wilt u voedsel zoals, fruit, groenten, zuivel en andere nog houdbare artikelen schenken
+            <p>Wilt u voedsel zoals, fruit, groenten, zuivel en andere nog houdbare artikelen schenken
                 aan Actie MIN? Neemt gerust contact op via mail : <a href="mailto:actiemenseninnood@gmail.com">actiemenseninnood@gmail.com</a> of
                 telefonisch via : 0473 24 13 61</p>
 
             <div class="row">
 
-                <div class="col s12 l6 para">
+                <div class="col s12 l6">
                     <p>In Carrefour market, Statiestraat 53A in Mol vind je onze ‘Voedselbox’ waarin je altijd
                         droge voeding mag droppen.
                     </p>
