ja teveel om op te noemen

--- a/min/nl/sponsors.html
+++ b/min/nl/sponsors.html
@@ -49,10 +49,10 @@
         <li><a href="ookdoneren.html">Doneren?</a></li>
     </ul>
 
-     <h1 class="center bckgrnd" id="sponsorsbg">Sponsors</h1>
+    <h1 class="center bckgrnd" id="sponsorsbg">Sponsors</h1>
 
     <div class="container txt">
-       
+
         <p>Sponsors van formaat zijn alle mensen die ons financieel ondersteunen door hun maandelijkse bijdragen te storten op onze rekening.<br>Door deze bijdragen kan onze vereniging blijven bestaan en mensen in armoede ondersteunen.</p>
         <p>Hieronder de vermelding van de bedrijven of firma's die ons ondersteunen met gratis voedsel te leveren:</p>
         <hr>
@@ -257,10 +257,13 @@
             </div>
         </div>
         <ul class="row taalfoot">
-            <li class="col s12 m3"><a href="">English</a></li>
-            <li class="col s12 m3"><a href="">Français</a></li>
-            <li class="col s12 m3"><a href="">Espanol</a></li>
-            <li class="col s12 m3"><a href="">русский</a></li>
+
+            <li class="col s12 m2"><a href="../talen/english.html">English</a></li>
+            <li class="col s12 m2"><a href="../talen/frans.html">Français</a></li>
+            <li class="col s12 m2"><a href="../talen/spaans.html">Espanol</a></li>
+            <li class="col s12 m2"><a href="../talen/pools.html">Polski</a></li>
+            <li class="col s12 m2"><a href="../talen/russisch.html">русский</a></li>
+            <li class="col s12 m2"><a href="../talen/arabisch.html">العربية</a></li>
         </ul>
         <div class="footer-copyright">
             <div class="">
