--- a/min/talen/arabisch.html
+++ b/min/talen/arabisch.html
@@ -68,7 +68,7 @@
             <div class="row onder">
 
                 <div class="col s12 m6 para">
-                    <p>اَنفُسِهِمعلىالاَعتِمَادِوَالكَرِيمالعيشمِنَليَتَمَكَنوَاحُلُولاَلَهُمنَجِدُوَالفُقرَاءالنََاسِمِنَالكَتِير <br />.الطَازَجَةالفَوَاكِهِوَالخُضَرمِتلَالمُمَيَزةالمَوَادِمِنَمَجمُوعَةنَطرَحُاسبُوعكُلِفِيمَجَانَاالخُبزَنُعطيالخَمِيسوَتَاءالتُلاَيَومِفِي .</p>
+                    <p>اَنفُسِهِمعلىالاَعتِمَادِوَالكَرِيمالعيشمِنَليَتَمَكَنوَاحُلُولاَلَهُمنَجِدُوَالفُقرَاءالنََاسِمِنَالكَتِير <br />.الطَازَجَةالفَوَاكِهِوَالخُضَرمِتلَالمُمَيَزةالمَوَادِمِنَمَجمُوعَةنَطرَحُاسبُو<br />عكُلِفِيمَجَانَاالخُبزَنُعطيالخَمِيسوَتَاءالتُلاَيَومِفِي .</p>
                 </div>
                 <div class="col s12 m6 para">
                     <p>عائلة(450مِناكتَروَاسَاسِيَاعُضوَا200الاَنَلَدَيهَا ( MIN نُسَاعِدُالاَنوَكَرِيملِعَيشحللهَاوَجَدنَالاَنَنَاالاَنمَعُونَتَنَاتَحتَاجتَعُدلَم <br><br>( 140 )اسبُوعكُلَتَقرِيبَاعَائلة . <br>بِمَكتَبِالعنوَانبِنَفسالتَسجِيليُمكِنُهُالاَمريَهُمهُوَلِمَنمُولبِمَدِينَة( ST. Apollonialaan 198, MOL )بِشَارعنَتَواجَدُ <br><br>شكرَاوَالاَنتضَارقاّعةقُربالاَستِقبَالاَت. <br><br>(8u30-12u)السَاعةمِنسَبتكُلَ <br> (10u-12u)السَاعةمِنَخمِيسوَتُلاَتَاءكُل <br>11u-30 فيتسجيلأحدث <br>10 u en 12u بينخميسكل</p>
@@ -104,12 +104,13 @@
             </div>
         </div>
         <ul class="row taalfoot">
-            <li class="col s12 m2"><a href="">Nederlands</a></li>
-            <li class="col s12 m2"><a href="">English</a></li>
-            <li class="col s12 m2"><a href="">Espanol</a></li>
-            <li class="col s12 m2"><a href="">Polski</a></li>
-            <li class="col s12 m2"><a href="">русский</a></li>
-            <li class="col s12 m2"><a href="">Français</a></li>
+
+            <li class="col s12 m2"><a href="../nl/home.html">Nederlands</a></li>
+            <li class="col s12 m2"><a href="../talen/english.html">English</a></li>
+            <li class="col s12 m2"><a href="../talen/frans.html">Français</a></li>
+            <li class="col s12 m2"><a href="../talen/spaans.html">Espanol</a></li>
+            <li class="col s12 m2"><a href="../talen/pools.html">Polski</a></li>
+            <li class="col s12 m2"><a href="../talen/russisch.html">русский</a></li>
         </ul>
         <div class="footer-copyright">
             <div class="">
