--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -95,57 +95,35 @@
 
 
 
-
-
                 </div>
-        </div>
-
-    </div>
-    <footer class="footer center-align">
-        <div class="row center-align">
-            <div class="col s12 l4">
-                <h4>Contactgegevens </h4>
-
-                <p>Algemene info/nieuwe aanvragen <br> <i class="material-icons">
-                        phone
-                    </i> 0473 /24 13 61 </p>
-                <hr>
-                <p>Kleding/huisraad/speelgoed <br>
-                    <i class="material-icons">
-                        phone
-                    </i> 0468/58 51 39</p>
-                <hr>
-                <p><i class="material-icons">
-                        email
-                    </i> <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
-                <hr>
-                <p>Bankrekening <br>
-                    <i class="material-icons">
-                        account_balance
-                    </i>BE29 7512 0621 4764 <br>
-                    BIC: AXABBE22 <br>
-                    Ondernemingsnummer : 0639.984.323
-                </p>
             </div>
-            <div class="col s12 l4">
-                <h4>Adressen</h4>
-                <p>Maatschappelijke zetel <br>
-                    Bresserdijk 4 <br>
-                    2400 Mol</p>
-                <hr>
-                <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
 
-                <div class="row linkenfoot">
-                    <div class="col s12 m4">
-                        <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img hover" height="100px" width="200px"></a>
-                    </div>
-                    <div class="col s12 m4 ">
-                        <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
-                    </div>
-                    <div class="col s12 m4">
-                        <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
-                    </div>
+        </div>
+        <footer class="footer center-align">
+            <div class="row center-align">
+                <div class="col s12 l4">
+                    <h4>Contactgegevens </h4>
 
+                    <p>Algemene info/nieuwe aanvragen <br> <i class="material-icons">
+                            phone
+                        </i> 0473 /24 13 61 </p>
+                    <hr>
+                    <p>Kleding/huisraad/speelgoed <br>
+                        <i class="material-icons">
+                            phone
+                        </i> 0468/58 51 39</p>
+                    <hr>
+                    <p><i class="material-icons">
+                            email
+                        </i> <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+                    <hr>
+                    <p>Bankrekening <br>
+                        <i class="material-icons">
+                            account_balance
+                        </i>BE29 7512 0621 4764 <br>
+                        BIC: AXABBE22 <br>
+                        Ondernemingsnummer : 0639.984.323
+                    </p>
                 </div>
                 <div class="col s12 l4">
                     <h4>Adressen</h4>
@@ -157,37 +135,60 @@
 
                     <div class="row linkenfoot">
                         <div class="col s12 m4">
-                            <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                            <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img hover" height="100px" width="200px"></a>
                         </div>
                         <div class="col s12 m4 ">
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                         </div>
                         <div class="col s12 m4">
                             <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
                         </div>
+
                     </div>
+                    <div class="col s12 l4">
+                        <h4>Adressen</h4>
+                        <p>Maatschappelijke zetel <br>
+                            Bresserdijk 4 <br>
+                            2400 Mol</p>
+                        <hr>
+                        <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
+
+                        <div class="row linkenfoot">
+                            <div class="col s12 m4">
+                                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                            </div>
+                            <div class="col s12 m4 ">
+                                <a href="#" class="fa fa-facebook"></a>
+                            </div>
+                            <div class="col s12 m4">
+                                <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
+                            </div>
+                        </div>
 
 
+                    </div>
+                    <div class="col s12 l4 maps">
+
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.5532704525053!2d5.121459915320794!3d51.19045617958424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135ab180b037d%3A0xfa96d446291438f!2sBresserdijk%204%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579784547227!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" class="responsive-img"></iframe>
+
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.570124284178!2d5.101584315758331!3d51.190145579584176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135a10a9a19c1%3A0x9111c9cf6d01fb2c!2sSint-Apollonialaan%20198%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579781606517!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+                    </div>
                 </div>
-                <div class="col s12 l4 maps">
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.5532704525053!2d5.121459915320794!3d51.19045617958424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135ab180b037d%3A0xfa96d446291438f!2sBresserdijk%204%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579784547227!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" class="responsive-img"></iframe>
-
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.570124284178!2d5.101584315758331!3d51.190145579584176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135a10a9a19c1%3A0x9111c9cf6d01fb2c!2sSint-Apollonialaan%20198%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579781606517!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
-                </div>
             </div>
+            <ul class="row taalfoot">
 
-        </div>
-        <ul class="row taalfoot">
-            <li class="col s12 m3"><a href="">English</a></li>
-            <li class="col s12 m3"><a href="">Français</a></li>
-            <li class="col s12 m3"><a href="">Espanol</a></li>
-            <li class="col s12 m3"><a href="">русский</a></li>
-        </ul>
-        <div class="footer-copyright">
-            <div class="">
-                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: <a href="../../webbureau/index.html">GNA design</a></p>
+                <li class="col s12 m2"><a href="../talen/english.html">English</a></li>
+                <li class="col s12 m2"><a href="../talen/frans.html">Français</a></li>
+                <li class="col s12 m2"><a href="../talen/spaans.html">Espanol</a></li>
+                <li class="col s12 m2"><a href="../talen/pools.html">Polski</a></li>
+                <li class="col s12 m2"><a href="../talen/russisch.html">русский</a></li>
+                <li class="col s12 m2"><a href="../talen/arabisch.html">العربية</a></li>
+            </ul>
+            <div class="footer-copyright">
+                <div class="">
+                    <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: <a href="../../webbureau/index.html">GNA design</a></p>
 
 
                 </div>
@@ -200,15 +201,12 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 
-    <script src="../js/materialize.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.sidenav').sidenav();
-            $(".dropdown-trigger").dropdown();
-        });
-
-    </script>
-</body>
-
-</html>
+        <script src="../js/materialize.min.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('.sidenav').sidenav();
+                $(".dropdown-trigger").dropdown();
+            });
+        </script>
+</body></html>
 
