--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -49,9 +49,9 @@
             <li><a href="../nl/historiek.html">Historiek</a></li>
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
         </ul>
-      <h1 class="center bckgrnd" id="armoedebeleidbg">Onze partners in armoedebeleid</h1>
+        <h1 class="center bckgrnd" id="armoedebeleidbg">Onze partners in armoedebeleid</h1>
         <div class="container">
-          
+
 
             <div class="row">
                 <div class="col s12 l6">
@@ -128,10 +128,13 @@
             </div>
         </div>
         <ul class="row taalfoot">
-            <li class="col s12 m3"><a href="">English</a></li>
-            <li class="col s12 m3"><a href="">Français</a></li>
-            <li class="col s12 m3"><a href="">Espanol</a></li>
-            <li class="col s12 m3"><a href="">русский</a></li>
+
+            <li class="col s12 m2"><a href="../talen/english.html">English</a></li>
+            <li class="col s12 m2"><a href="../talen/frans.html">Français</a></li>
+            <li class="col s12 m2"><a href="../talen/spaans.html">Espanol</a></li>
+            <li class="col s12 m2"><a href="../talen/pools.html">Polski</a></li>
+            <li class="col s12 m2"><a href="../talen/russisch.html">русский</a></li>
+            <li class="col s12 m2"><a href="../talen/arabisch.html">العربية</a></li>
         </ul>
         <div class="footer-copyright">
             <div class="">
