--- a/min/talen/spaans.html
+++ b/min/talen/spaans.html
@@ -121,12 +121,13 @@
             </div>
         </div>
         <ul class="row taalfoot">
-            <li class="col s12 m2"><a href="">Nederlands</a></li>
-            <li class="col s12 m2"><a href="">English</a></li>
-            <li class="col s12 m2"><a href="">Français</a></li>
-            <li class="col s12 m2"><a href="">Polski</a></li>
-            <li class="col s12 m2"><a href="">русский</a></li>
-            <li class="col s12 m2"><a href="">العربية</a></li>
+
+            <li class="col s12 m2"><a href="../nl/home.html">Nederlands</a></li>
+            <li class="col s12 m2"><a href="../talen/english.html">English</a></li>
+            <li class="col s12 m2"><a href="../talen/frans.html">Français</a></li>
+            <li class="col s12 m2"><a href="../talen/pools.html">Polski</a></li>
+            <li class="col s12 m2"><a href="../talen/russisch.html">русский</a></li>
+            <li class="col s12 m2"><a href="../talen/arabisch.html">العربية</a></li>
         </ul>
         <div class="footer-copyright">
             <div class="">
