--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -92,7 +92,7 @@
 
 
 
-
+                </div>
 
 
 
@@ -117,7 +117,7 @@
                 <hr>
                 <p><i class="material-icons">
                         email
-                    </i> <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+                    </i> <a href="mailto:actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
                 <hr>
                 <p>Bankrekening <br>
                     <i class="material-icons">
@@ -137,7 +137,7 @@
 
                 <div class="row linkenfoot">
                     <div class="col s12 m4">
-                        <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img hover" height="100px" width="200px"></a>
+                        <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img hover" height="100" width="200"></a>
                     </div>
                     <div class="col s12 m4 ">
                         <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
@@ -157,7 +157,7 @@
 
                     <div class="row linkenfoot">
                         <div class="col s12 m4">
-                            <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                            <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200"></a>
                         </div>
                         <div class="col s12 m4 ">
                             <a href="#" class="fa fa-facebook"></a>
@@ -208,7 +208,7 @@
         });
 
     </script>
-</body>
-
+    
+    </body>
 </html>
 
