--- a/min/talen/spaans.html
+++ b/min/talen/spaans.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="es" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
@@ -111,7 +111,7 @@
         </div>
         <div class="row linkenfoot">
             <div class="col s12 m4">
-                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200"></a>
             </div>
             <div class="col s12 m4 ">
                 <a href="#" class="fa fa-facebook"></a>
