--- a/min/index.html
+++ b/min/index.html
@@ -31,11 +31,11 @@
             <ul>
                 <li><a href="nl/home.html"><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">&nbsp;|
                         <span>Nederlands</span></a></li>
-                <li><a href="../talen/frans.html"><img src="img/vlaggen/1200px-Flag_of_France.svg.png" alt="" class="responsive-img">&nbsp;| <span>Frans</span></a></li>
-                <li><a href="../talen/english.html"><img src="img/vlaggen/Flag_of_Great_Britain_(English_version).png" alt="" class="responsive-img">&nbsp;| <span>Engels</span></a></li>
-                <li><a href="../talen/russisch.html"><img src="img/vlaggen/russian-federation-flag.jpg" alt="" class="responsive-img">&nbsp;| <span>русский</span></a></li>
-                <li><a href="../talen/arabisch.html"><img src="img/vlaggen/main-qimg-adf6ae10ae207f13d5c66cb486b51bb0.png" alt="" class="responsive-img">&nbsp;| <span>العربية</span></a></li>
-                <li><a href="../talen/pools.html"><img src="img/vlaggen/polen.png" alt="Pools" class="responsive-img">&nbsp;| <span>Polski</span></a></li>
+                <li><a href="talen/frans.html"><img src="img/vlaggen/1200px-Flag_of_France.svg.png" alt="" class="responsive-img">&nbsp;| <span>Frans</span></a></li>
+                <li><a href="talen/english.html"><img src="img/vlaggen/Flag_of_Great_Britain_(English_version).png" alt="" class="responsive-img">&nbsp;| <span>Engels</span></a></li>
+                <li><a href="talen/russisch.html"><img src="img/vlaggen/russian-federation-flag.jpg" alt="" class="responsive-img">&nbsp;| <span>русский</span></a></li>
+                <li><a href="talen/arabisch.html"><img src="img/vlaggen/main-qimg-adf6ae10ae207f13d5c66cb486b51bb0.png" alt="" class="responsive-img">&nbsp;| <span>العربية</span></a></li>
+                <li><a href="talen/pools.html"><img src="img/vlaggen/polen.png" alt="Pools" class="responsive-img">&nbsp;| <span>Polski</span></a></li>
             </ul>
         </div>
     </div>
