talen navigatie aangepast en link hulp nodig

--- a/min/talen/arabisch.html
+++ b/min/talen/arabisch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | MIN</title>
+    <title>العربية | MIN</title>
     <meta name="author" content="co-authored door Arne Sas, Arne Van Beethoven, Arne De Cnodder en Gillian Heyns">
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!--Import Google Icon Font-->
@@ -35,7 +35,7 @@
     <div class="txt">
 
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="../nl/home.html">Home</a></li>
+            <li><a href="../nl/home.html">العربية</a></li>
         </ul>
         <h1 class="center bckgrnd" id="homebg">الصفحة الرئيسية - العربية</h1>
         <div class="container">
@@ -43,7 +43,7 @@
                 <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img hide-on-small-only" alt="">
                 <div id="knop" class="centered">
                     <div class="effect">
-                        <h4><a href="op=op.html">بحاجة الى مساعدة؟?</a></h4>
+                        <h4><a href="#opop">بحاجة الى مساعدة؟?</a></h4>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <hr>
             <br>
-            <div class="row onder">
+            <div class="row onder" id="opop">
 
                 <div class="col s12 m6 para">
                     <p>اَنفُسِهِمعلىالاَعتِمَادِوَالكَرِيمالعيشمِنَليَتَمَكَنوَاحُلُولاَلَهُمنَجِدُوَالفُقرَاءالنََاسِمِنَالكَتِير <br />.الطَازَجَةالفَوَاكِهِوَالخُضَرمِتلَالمُمَيَزةالمَوَادِمِنَمَجمُوعَةنَطرَحُاسبُو<br />عكُلِفِيمَجَانَاالخُبزَنُعطيالخَمِيسوَتَاءالتُلاَيَومِفِي .</p>
