--- a/min/talen/english.html
+++ b/min/talen/english.html
@@ -43,7 +43,7 @@
                 <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img hide-on-small-only" alt="">
                 <div id="knop" class="centered">
                     <div class="effect">
-                        <h4><a href="op=op.html">Need help?</a></h4>
+                        <h4><a href="#opop">Need help?</a></h4>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <hr>
             <br>
-            <div class="row onder">
+            <div class="row onder" id="opop">
 
                 <div class="col s12 m6 para">
                     <h4 class="center">Food distribution, with fresh fruits and vegetables</h4>
