--- a/min/talen/russisch.html
+++ b/min/talen/russisch.html
@@ -43,7 +43,7 @@
                 <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img hide-on-small-only" alt="">
                 <div id="knop" class="centered">
                     <div class="effect">
-                        <h4><a href="op=op.html">
+                        <h4><a href="#opop">
                                 Нужна помощь?</a></h4>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
             </div>
             <hr>
             <br>
-            <div class="row onder">
+            <div class="row onder" id="opop">
 
                 <div class="col s12 m6 para">
                     <h4 class="center">Распределениепродуктовпитания <br>(сосвежимиовощамиифруктами)</h4>
