facebook feed toegevoegd

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -76,16 +76,30 @@
             <hr>
             <br>
             <div class="row onder">
-                <div class="col s12 m6 para">
+                <div class="col s12 l6 para">
                     <h4 class="center">Wie zijn we</h4>
                     <p>Op de dag van vandaag zijn wij een groep van 50 gedreven vrijwilligers die Actie voert voor Mensen In Nood, ongeacht welk hun geloof, kleur, of politieke overtuiging is. Wij zijn solidair met mensen die het moeten stellen met een leefloon, budgetbeheer of die gebukt gaan onder collectieve schuldbemiddeling. Ook voor mensen die uitgeprocedeerd zijn en geen enkele vorm van inkomen meer hebben trachten we er te zijn en mee op pad te gaan om oplossingen te zoeken.</p>
+                    <br>
+
                 </div>
-                <div class="col s12 m6 para">
-                    <h4 class="center">Hoe gaan we te werk</h4>
-                    <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
+                <div class="col s12 l6">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FActie-Min-vzw-114502416757004%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=215975879308617" style="border:none;overflow:hidden" scrolling="yes" frameborder="0" allowTransparency="true" allow="encrypted-media" id="facebookfeed" class="center-align"></iframe>
                 </div>
             </div>
+            <div class="col s12 m6 para">
+                <h4 class="center">Hoe gaan we te werk</h4>
+                <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
+            </div>
+
+
+
+
+
+
+
+
         </div>
+
     </div>
     <footer class="footer center-align">
         <div class="row center-align">
