linken naar homepagina logo op taalpagina's

--- a/min/talen/arabisch.html
+++ b/min/talen/arabisch.html
@@ -23,7 +23,7 @@
     <div><a href="#"><img src="../img/backtotop.png" class="img-responsive totop" alt="terug naar boven knop"></a></div>
     <nav class="ccakleur">
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="../nl/home.html" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="../nl/home.html">Home</a></li>
